tests/vertical-slice/reject/move_into_record_owned_record.hew
type Owned { value: string; }
type Holder { item: Owned; }

fn main() -> string {
    let item = Owned { value: "hello" };
    let _holder = Holder { item: item };
    item.value
}
